// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildManifest It should generate cloud run service with annotations 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    run.googleapis.com/launch-stage: BETA
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'false'
        run.googleapis.com/startup-cpu-boost: 'true'
        run.googleapis.com/sessionAffinity: 'true'
        run.googleapis.com/vpc-access-connector: example-clan-vpc-connector
        run.googleapis.com/vpc-access-egress: all-traffic
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It should generate cloud run service with security 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    run.googleapis.com/launch-stage: BETA
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'false'
        run.googleapis.com/startup-cpu-boost: 'true'
        run.googleapis.com/sessionAffinity: 'true'
        run.googleapis.com/vpc-access-connector: example-clan-vpc-connector
        run.googleapis.com/vpc-access-egress: all-traffic
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
        - name: security-authz
          image: image
          ports:
            - name: http1
              containerPort: 8000
          env:
            - name: ENVOY_PROTOCOL
              value: http
            - name: CPU_LIMIT
              value: '0.5'
          resources:
            limits:
              cpu: 0.5
              memory: 512Mi
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It should generate manifest with volume for StatefulSet 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-service
  volumeClaimTemplates:
    - metadata:
        name: example-service
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: premium-rwo
        resources:
          requests:
            storage: 10Gi
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts:
            - mountPath: /mnt/data
              name: example-service
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: example-service
  minReplicas: 3
  maxReplicas: 3
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest It should generate manifest with volumes for StatefulSet 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    iso-country: se
    tenant-alias: testrunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  volumeClaimTemplates:
    - metadata:
        name: example-service
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: premium-rwo
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts:
            - mountPath: /mnt/shared/data
              name: example-service
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest It should set traffic to 0 of new revision if serve traffic is false 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    run.googleapis.com/launch-stage: BETA
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/vpc-access-connector: example-clan-vpc-connector
        run.googleapis.com/vpc-access-egress: all-traffic
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 0
      latestRevision: true
    - percent: 100
      revisionName: example-service-lsublujx
"
`;

exports[`buildManifest should generate manifest cloudrun file with correct content 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    run.googleapis.com/launch-stage: BETA
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/vpc-access-connector: example-clan-vpc-connector
        run.googleapis.com/vpc-access-egress: all-traffic
        run.googleapis.com/cloudsql-instances: instance-name
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              valueFrom:
                secretKeyRef:
                  key: latest
                  name: test-secret
            - name: SQL_INSTANCE_NAME
              valueFrom:
                secretKeyRef:
                  key: latest
                  name: test-instance-name
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest should generate manifest file with correct content 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: WORKFLOW_INPUT1
              value: value1
            - name: WORKFLOW_INPUT2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate manifest file with correct content for availability high 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate manifest file with correct content for availability low 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: 'true'
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate manifest file with correct content for staging 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: 'true'
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: staging
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 2
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should set OPA env vars 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    label1: labelValue1
    label2: labelValue2
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
        - name: security-authz
          image: eu.gcr.io/extenda/security:authz
          ports:
            - containerPort: 9001
          env:
            - name: ENVOY_PROTOCOL
              value: http
            - name: CPU_LIMIT
              value: '0.5'
          volumeMounts:
            - mountPath: /config
              name: opa
              readOnly: true
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 0.5
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 9001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;
